--- a/cvStyle.css
+++ b/cvStyle.css
@@ -81,9 +81,12 @@ box-shadow: 0 35px 55px rgba(0,0,0,0.1);
     list-style:none;
     margin: 10px 0;
     cursor: pointer;
+   
 
 }
-
+.contacto.educacion ul.tag{
+    color:aliceblue;
+}
 .contacto ul li .icon{
     display: inline-block;
     width: 30px;
@@ -101,7 +104,7 @@ box-shadow: 0 35px 55px rgba(0,0,0,0.1);
 
 }
 .contacto.educacion li{
-     margin-bottom: 15px;
+    margin-bottom: 15px;
 
 }
 .contacto.educacion h3:nth-child(2){
