--- a/cvStyle.css
+++ b/cvStyle.css
@@ -272,8 +272,13 @@ button i{
 }
 
 section{
-    
+    display: inline-block;
+    position: relative;
     text-align: center;
    align-items: center;
-    
+   font-weight: bold;
+    color: #0775d6;
+     background-color: #cfe2f1;
+     letter-spacing: 3px;
+     margin-bottom: 10px;
 }
