--- a/cvStyle.css
+++ b/cvStyle.css
@@ -248,8 +248,8 @@ address{
 	height:55px;
 	bottom:60px;
 	right:40px;
-	background-color:#0C9;
-	color:#FFF;
+	background-color:rgb(221, 243, 237);
+	color:rgb(238, 0, 0);
 	border-radius:50px;
 	border-radius: 50%;
 	box-shadow: 2px 2px 3px #999;
@@ -260,6 +260,7 @@ address{
 }
 .botonDescarga i{
     margin-left: 5px;
+    margin-top: 10px;
 }
 div.botonDescarga{
    border: #c33030;
